--- a/index.html
+++ b/index.html
@@ -3,12 +3,8 @@
 <body>
 
 <p>Create a link of an image:
-<a href="default.asp">
-<img src="smiley.gif" alt="HTML tutorial" width="32" height="32"></a></p>
-
-<p>No border around the image, but still a link:
-<a href="default.asp">
-<img border="0" src="smiley.gif" alt="HTML tutorial" width="32" height="32"></a></p>
+<a href="www.google.com">
+<img src="http://freestyle4everihd.clanteam.com/android.png" alt="HTML tutorial" width="32" height="32"></a></p>
 
 </body>
 </html>
